# cxx-refactor

./: .gitmodules  CMakeLists.txt  LICENSE  README.md
examples/: template_method.cpp
src/: CMakeLists.txt
src/cxx-refactor/: CMakeLists.txt  find_definition_action.cpp  find_definition_action.hpp  main.cpp  multi_source_modifications.hpp  pch.hpp  refactor_action.hpp  refactor_action_registry.hpp  single_source_modifications.hpp  source_modification.hpp  source_modification_action.cpp  source_modification_action.hpp  source_rewriter.cpp  source_rewriter.hpp  template_parameter_remove_action.cpp  template_parameter_remove_action.hpp
src/cxx-refactor/test/: CMakeLists.txt  source_rewriter_test.cpp  test.cpp
src/log/: CMakeLists.txt  log.hpp  log_init.cpp  log_init.hpp
